--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
+**/ObjDir/*
 [Ll]og/
-ObjDrop/
 
 # Visual Studio 2015 cache/options directory
 .vs/
@@ -260,10 +260,3 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/ObjDir/
-/bin
-/Installer/BuildDrop/
-/Installer/output/
-/.sonarqube/
-/.clang-tidy
-/compile_commands.json
